# snaffler-linux

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  setup.py  snaffler-20260114-164735.json  snaffler-20260114-164735.tsv  snaffler-20260114-165538.json  snaffler-20260114-165538.tsv  snaffler.1
.github/workflows/: ci.yml
debian/: changelog  control  copyright  rules  snaffler-ng.manpages  watch
debian/tests/: control
snaffler/: __init__.py  api.py
snaffler/accessors/: file_accessor.py  ftp_file_accessor.py  local_file_accessor.py  smb_file_accessor.py
snaffler/analysis/: certificates.py  file_result.py  file_scanner.py  files.py
snaffler/classifiers/: __init__.py  default_rules.py  evaluator.py  loader.py  rules.py
snaffler/cli/: main.py  results.py
snaffler/config/: configuration.py
snaffler/discovery/: ad.py  files.py  ftp_tree_walker.py  local_tree_walker.py  shares.py  smb_tree_walker.py  tree.py
snaffler/engine/: domain_pipeline.py  file_pipeline.py  runner.py  share_pipeline.py
snaffler/resume/: scan_state.py
snaffler/rules/: example_custom_rule.toml
snaffler/transport/: auth.py  dns.py  ftp.py  ldap.py  smb.py  socks.py
snaffler/utils/: __init__.py  bloom.py  connection_cache.py  fatal.py  hotkeys.py  logger.py  nxc_parser.py  path_utils.py  progress.py  target_parser.py
snaffler/web/: dashboard.py  server.py
tests/: conftest.py
tests/data/: aspnet_viewstate_keys.txt  pem_pass_key.pem  server.crt  test-sql.ps1
tests/integration/: test_domain_users.py  test_ftp.py  test_full_scan.py  test_local_runner.py  test_pipeline.py  test_walk.py
tests/test_analysis/: test_file_scanner.py
tests/test_classifiers/: test_default_rules.py  test_rule_evaluator.py
(+365 files in other folders)
