[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snaffler-ng"
version = "1.1.1"
description = "Snaffler Impacket port - find credentials and sensitive data on SMB shares"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "totekuh", email = "totekuh@protonmail.com" }
]
requires-python = ">=3.9"

dependencies = [
    "impacket>=0.11.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "tomlkit>=0.12.0",
]

[project.scripts]
snaffler = "snaffler.cli.main:app"

[tool.setuptools]
packages = { find = {} }

[tool.setuptools.package-data]
snaffler = ["rules/*.toml"]

[project.optional-dependencies]
socks = ["pysocks>=1.7.0"]
test = [
    "pytest>=8.0",
    "pytest-cov",
]